GL/Projet_GL/src/test/deca/context/valid/sansObjet/while/while_simple_condition.deca
// Test : while_simple_condition
// But : tester une boucle while avec condition simple.
// Couvre : while, condition booléenne.
// Résultat attendu : compilation sans erreur.

{
    int a;
    while (true) {
        a = 3;
    }
}