GL/Projet_GL/src/test/deca/context/invalid/sansObjet/if/invalid_if_int_condition.deca
// Test : if_condition_int
// But : interdire une condition if de type int.
// Couvre : vérification des conditions.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: If condition must be of type boolean

{
   if (3) {
      ;
   }
}
